--- a/CentOS6.5_custom/http/ks.cfg
+++ b/CentOS6.5_custom/http/ks.cfg
@@ -21,18 +21,15 @@ part / --fstype=ext4 --asprimary --grow --size=1
 
 
 repo --name="CentOS" --baseurl=http://ftp.iij.ad.jp/pub/linux/centos/6.5/os/x86_64/ --cost=100
-%packages --nobase
+%packages
 @core
-openssh-clients
-rsync
-wget
 %end
 
 
 %post
 USER_NAME=vagrant
 USER_PASSWORD=vagrant
-USER_ID=501
+USER_ID=1000
 USER_GROUP=${USER_NAME}
 USER_HOME=/home/${USER_NAME}
 USER_KEY_URL='https://raw.github.com/mitchellh/vagrant/master/keys/vagrant.pub'
@@ -52,7 +49,7 @@ echo ${USER_PASSWORD}|passwd --stdin ${USER_NAME}
 
 echo "Installing users keys ..."
 mkdir -pm 700 ${USER_HOME}/.ssh
-wget --no-check-certificate ${USER_KEY_URL} -O ${USER_HOME}/.ssh/authorized_keys
+curl -3 -L ${USER_KEY_URL} -o ${USER_HOME}/.ssh/authorized_keys
 chmod 600 ${USER_HOME}/.ssh/authorized_keys
 chown -R ${USER_NAME}:${USER_GROUP} ${USER_HOME}/.ssh
 
