--- a/CentOS7.0.1406_custom/http/ks.cfg
+++ b/CentOS7.0.1406_custom/http/ks.cfg
@@ -17,12 +17,14 @@ keyboard --vckeymap=jp106 --xlayouts='jp106'
 lang en_US.UTF-8
 
 # Network information
-network  --bootproto=dhcp --device=enp0s3 --ipv6=auto --activate
+#network  --bootproto=dhcp --device=enp0s3 --ipv6=auto --activate
+network  --bootproto=dhcp --device=link --ipv6=auto --activate
 network  --hostname=localhost.localdomain
 # Root password
 rootpw --plaintext vagrant
 # Do not configure the X Window System
 skipx
+selinux --disabled
 # System timezone
 timezone Asia/Tokyo --isUtc
 # System bootloader configuration
