--- a/CentOS6.5_custom/http/ks.cfg
+++ b/CentOS6.5_custom/http/ks.cfg
@@ -1,9 +1,10 @@
 #version=DEVEL
 install
+text
 url --url=http://ftp.iij.ad.jp/pub/linux/centos/6.5/os/x86_64/
 lang ja_JP.UTF-8
 keyboard jp106
-network --onboot yes --device eth0 --bootproto dhcp --ipv6 auto
+network --activate --onboot=yes --device=eth0 --bootproto=dhcp --ipv6=auto
 rootpw  --plaintext vagrant
 firewall --service=ssh
 authconfig --enableshadow --passalgo=sha512
@@ -29,6 +30,7 @@ repo --name="CentOS" --baseurl=http://ftp.iij.ad.jp/pub/linux/centos/6.5/os/x86_
 
 
 %post
+SSHD_PORT=22
 USER_NAME=vagrant
 USER_PASSWORD=vagrant
 USER_ID=1000
@@ -40,8 +42,8 @@ echo "Updating packages ..."
 /usr/bin/yum -y update
 
 echo "Setting sudoers ..."
-echo "Defaults:%wheel !requiretty" >> /etc/sudoers.d/wheel
-echo "%wheel ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/wheel
+echo 'Defaults:%wheel !requiretty' >> /etc/sudoers.d/wheel
+echo '%wheel ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers.d/wheel
 chmod 0440 /etc/sudoers.d/wheel
 
 echo "Creating users ..."
@@ -54,5 +56,13 @@ mkdir -pm 700 ${USER_HOME}/.ssh
 curl -3 -L ${USER_KEY_URL} -o ${USER_HOME}/.ssh/authorized_keys
 chmod 600 ${USER_HOME}/.ssh/authorized_keys
 chown -R ${USER_NAME}:${USER_GROUP} ${USER_HOME}/.ssh
+
+echo "Changing sshd port ..."
+echo "Port ${SSHD_PORT}" >> /etc/ssh/sshd_config
+/sbin/service sshd restart
+
+echo "Changing iptables ..."
+/bin/sed -i "s/-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT/-A INPUT -m state --state NEW -m tcp -p tcp --dport ${SSHD_PORT} -j ACCEPT/" /etc/sysconfig/iptables
+/sbin/service iptables restart
 
 %end
