--- a/CentOS7.0.1406_custom/http/ks.cfg
+++ b/CentOS7.0.1406_custom/http/ks.cfg
@@ -2,33 +2,33 @@
 # System authorization information
 auth --enableshadow --passalgo=sha512
 
-# Use CDROM installation media
-#cdrom
+# Use Text mode
+text
 # Use network installation
 url --url="http://ftp.iij.ad.jp/pub/linux/centos/7/os/x86_64/"
-# Use text mode install
-text
 # Run the Setup Agent on first boot
 firstboot --enable
 ignoredisk --only-use=sda
 # Keyboard layouts
-keyboard --vckeymap=jp106 --xlayouts='jp106'
+keyboard --vckeymap=jp106 --xlayouts='jp'
 # System language
-lang en_US.UTF-8
+lang ja_JP.UTF-8
 
 # Network information
-#network  --bootproto=dhcp --device=enp0s3 --ipv6=auto --activate
-network  --bootproto=dhcp --device=link --ipv6=auto --activate
+network  --bootproto=dhcp --device=enp0s3 --ipv6=auto --onboot=on --activate
+network  --bootproto=dhcp --device=enp0s8 --ipv6=auto --onboot=on
 network  --hostname=localhost.localdomain
 # Root password
 rootpw --plaintext vagrant
 # Do not configure the X Window System
 skipx
-selinux --disabled
 # System timezone
-timezone Asia/Tokyo --isUtc
+timezone Asia/Tokyo --isUtc --nontp
 # System bootloader configuration
 bootloader --location=mbr --boot-drive=sda
+# Selinux
+selinux --disabled
+# Reboot
 reboot
 
 # Partition clearing information
@@ -41,8 +41,6 @@ part / --fstype="xfs" --asprimary --grow --size=1
 
 %packages
 @core
-#rsync
-
 %end
 
 
@@ -51,6 +49,7 @@ part / --fstype="xfs" --asprimary --grow --size=1
 
 
 %post
+SSHD_PORT=22
 USER_NAME=vagrant
 USER_PASSWORD=vagrant
 USER_ID=1000
@@ -62,8 +61,8 @@ echo "Updating packages ..."
 /usr/bin/yum -y update
 
 echo "Setting sudoers ..."
-echo "Defaults:%wheel !requiretty" >> /etc/sudoers.d/wheel
-echo "%wheel ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/wheel
+echo 'Defaults:%wheel !requiretty' >> /etc/sudoers.d/wheel
+echo '%wheel ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers.d/wheel
 chmod 0440 /etc/sudoers.d/wheel
 
 echo "Creating users ..."
@@ -76,5 +75,14 @@ mkdir -pm 700 ${USER_HOME}/.ssh
 curl -3 -L ${USER_KEY_URL} -o ${USER_HOME}/.ssh/authorized_keys
 chmod 600 ${USER_HOME}/.ssh/authorized_keys
 chown -R ${USER_NAME}:${USER_GROUP} ${USER_HOME}/.ssh
+
+echo "Changing sshd port ..."
+echo "Port ${SSHD_PORT}" >> /etc/ssh/sshd_config
+/bin/systemctl restart sshd.service
+
+echo "Changing firewalld ..."
+cp /usr/lib/firewalld/services/ssh.xml /etc/firewalld/services/ssh.xml
+sed -i -e "s/22/${SSHD_PORT}/g" /etc/firewalld/services/ssh.xml
+/bin/systemctl restart firewalld.service
 
 %end
