--- a/CentOS7.0.1406_custom/http/ks.cfg
+++ b/CentOS7.0.1406_custom/http/ks.cfg
@@ -42,6 +42,7 @@ part / --fstype="xfs" --asprimary --grow --size=1
 %packages
 @core
 rsync
+nfs-utils
 %end
 
 
@@ -56,7 +57,7 @@ USER_PASSWORD=vagrant
 USER_ID=1000
 USER_GROUP=${USER_NAME}
 USER_HOME=/home/${USER_NAME}
-USER_KEY_URL='https://raw.github.com/mitchellh/vagrant/master/keys/vagrant.pub'
+USER_KEY_URL='https://raw.githubusercontent.com/mitchellh/vagrant/master/keys/vagrant.pub'
 
 echo "Updating packages ..."
 /usr/bin/yum -y update
@@ -73,7 +74,7 @@ echo ${USER_PASSWORD}|passwd --stdin ${USER_NAME}
 
 echo "Installing users keys ..."
 mkdir -pm 700 ${USER_HOME}/.ssh
-curl -3 -L ${USER_KEY_URL} -o ${USER_HOME}/.ssh/authorized_keys
+curl -L ${USER_KEY_URL} -o ${USER_HOME}/.ssh/authorized_keys
 chmod 600 ${USER_HOME}/.ssh/authorized_keys
 chown -R ${USER_NAME}:${USER_GROUP} ${USER_HOME}/.ssh
 
