CentOS7.2のリファクタリング

--- a/CentOS7.2.1511_custom/http/ks.cfg
+++ b/CentOS7.2.1511_custom/http/ks.cfg
@@ -3,9 +3,10 @@
 auth --enableshadow --passalgo=sha512
 
 # Use Text mode
-text
+#text
 # Use network installation
-url --url="http://ftp.iij.ad.jp/pub/linux/centos/7/os/x86_64/"
+#url --url="http://ftp.iij.ad.jp/pub/linux/centos/7/os/x86_64/"
+url --url="http://mirror.centos.org/centos/7/os/x86_64/"
 # Run the Setup Agent on first boot
 firstboot --enable
 ignoredisk --only-use=sda
